# Hipfort_Course

./: .CMakeLists.txt.swp  .env.swp  .gitignore  CMakeCache.txt  CMakeLists.txt  Hipfort.xmind  LICENSE  Makefile  README.md  cmake_install.cmake  env  install.sh
.ipynb_checkpoints/: CMakeLists-checkpoint.txt  env-checkpoint  install-checkpoint.sh
Build_Hipfort_Software/: Building_HIP_software.ipynb  Building_Hipfort_software.ipynb  hip_utils.f90
Build_Hipfort_Software/.ipynb_checkpoints/: Building_HIP_software-checkpoint.ipynb  Building_Hipfort_software-checkpoint.ipynb
Building_software/.ipynb_checkpoints/: README-checkpoint.md
Exercises/Chessboard_CPU/: CMakeLists.txt  Exercise.ipynb  chessboard_CPU.f90  chessboard_CPU_answer.f90
Exercises/Chessboard_GPU/: CMakeLists.txt  chessboard_CPU_answer.f90  chessboard_GPU.f90  chessboard_GPU_answer.f90  kernel_code.cpp  kernel_code_answer.cpp  step0_kernel.h  step1_init.h
Exercises/Chessboard_GPU/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  Exercise-checkpoint.ipynb  chessboard_GPU-checkpoint.f90  chessboard_GPU_answer-checkpoint.f90  kernel_code-checkpoint.cpp  step2_malloc-checkpoint.h  step4_copy-checkpoint.h  step6_reset-checkpoint.h
Exercises/E2_Chessboard_GPU/: CMakeLists.txt  Exercise.ipynb  step3_launch.h
Exercises/E3_Managed_Memory/: CMakeLists.txt  Exercise.ipynb  chessboard_mm_answer.f90
Exercises/E3_Managed_Memory/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  Exercise-checkpoint.ipynb  chessboard_mm_answer-checkpoint.f90
Fortran_Refresher/: CMakeCache.txt  CMakeLists.txt  Exercise.ipynb  Fortran.ipynb  Makefile  c_functions.cpp  chess_board_answer.f90  chessboard_answer.f90  cmake_install.cmake  kernels.cpp  tensor_lib.f90  tensor_lib_c.f90  tensoradd_allocatable  tensoradd_allocatable.f90  tensoradd_cfun  tensoradd_cfun.f90  tensoradd_ckernel.f90  tensoradd_function  tensoradd_function.f90  tensoradd_module  tensoradd_module.f90  tensoradd_pointer  tensoradd_pointer.f90  tensoradd_simple  tensoradd_simple.f90
Fortran_Refresher/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  Exercise-checkpoint.ipynb  Fortran-checkpoint.ipynb  kernels-checkpoint.cpp  tensor_lib-checkpoint.f90  tensor_lib_c-checkpoint.f90  tensoradd-checkpoint.f90  tensoradd_allocatable-checkpoint.f90  tensoradd_cfun-checkpoint.f90  tensoradd_ckernel-checkpoint.f90  tensoradd_function-checkpoint.f90  tensoradd_module-checkpoint.f90  tensoradd_pointer-checkpoint.f90  tensoradd_simple-checkpoint.f90
GPU_Computing_Fundamentals/: Fundamentals.ipynb  Fundamentals.xmind  README.md
Hipfort_Example/: HIP_Example.ipynb  Hipfort_Example.ipynb  hip_utils.f90  kernel_code.cpp  tensor_hip.f90  tensoradd_hip_cptr.f90  tensoradd_hip_fptr.f90  tensoradd_hip_oo.f90
Hipfort_Examples/: CMakeLists.txt  hip_utils.f90
Hipfort_Examples/.ipynb_checkpoints/: CMakeLists-checkpoint.txt
Kernel_Example/: CMakeLists.txt  tensor_lib_hip_cptr.f90  tensor_lib_hip_fptr.f90  tensor_lib_hip_oo.f90  tensor_lib_oo.f90  tensoradd_hip_fptr.f90  tensoradd_oo.f90
Kernel_Example/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  kernel_code-checkpoint.cpp  tensor-checkpoint.f90  tensor_lib_c_ptr-checkpoint.f90  tensor_lib_hip_cptr-checkpoint.f90  tensoradd_hip_cptr-checkpoint.f90  tensoradd_hip_oo-checkpoint.f90
Kernel_Example/old_files/.ipynb_checkpoints/: tensor_lib_f2003_oo-checkpoint.f90
Kernels/: README.md
Kernels_on_the_GPU/: tensor_lib_f2003.f90
L1_Fortran_Refresher/: CMakeLists.txt  Fortran.ipynb  c_functions.cpp  tensoradd_simple.f90
L2_GPU_Computing_Fundamentals/: Fundamentals.xmind
L3_Hipfort_Introduction/: HIP.ipynb
L4_Build_Hipfort_Software/: Building_Hipfort_software.ipynb
L5_Hipfort_Examples/: CMakeLists.txt
L5_hipFORT_Examples/: tensoradd_hip_cptr.f90  tensoradd_hip_fptr_managed.f90  tensoradd_hip_oo.f90
L6_Memory_Management/: CMakeLists.txt  Memory Benchmark Exercise.ipynb.orig  Memory.ipynb  README.md  managed_mem.f90  memcpy_async.f90  pinned_mem.f90
L6_Memory_Management/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  Memory-checkpoint.ipynb  managed_mem-checkpoint.f90  memcpy_sync-checkpoint.f90  pinned_mem-checkpoint.f90
L6_Memory_Management/memcpy_benchmark/: CMakeLists.txt  memcpy_bench.f90
L6_Memory_Management/memcpy_benchmark/.ipynb_checkpoints/: memcpy_bench-checkpoint.f90
L7_Integration_with_HIP_libraries/: README.md
Memory_Management/: Memory.ipynb  MemoryManagement.ipynb
course_material/: Hipfort.xmind
course_material/L1_Fortran_Refresher/: CMakeLists.txt  Fortran.html  Fortran.ipynb  tensor_lib.f90  tensor_lib_c.f90  tensoradd_allocatable.f90  tensoradd_simple.f90
course_material/L1_Fortran_Refresher/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  Fortran-checkpoint.ipynb  README-checkpoint.md  tensor_lib-checkpoint.f90  tensoradd_allocatable-checkpoint.f90  tensoradd_cfun-checkpoint.f90  tensoradd_pointer-checkpoint.f90  tensoradd_simple-checkpoint.f90
course_material/L6_Memory_Management/: CMakeLists.txt  Memory.html  Memory.ipynb  README.md  managed_mem.f90  paged_mem.f90  pinned_mem.f90  tensoradd_hip_pinned.f90
course_material/L6_Memory_Management/.ipynb_checkpoints/: Memory-checkpoint.ipynb  managed_mem-checkpoint.f90  memcpy_async-checkpoint.f90  paged_mem-checkpoint.f90  pinned_mem-checkpoint.f90  tensoradd_hip_managed-checkpoint.f90
course_material/L6_Memory_Management/memcpy_benchmark/: Benchmarks.html  Benchmarks.ipynb  CMakeLists.txt  data.csv  memcpy_bench.f90  setonix.csv
course_material/L6_Memory_Management/memcpy_benchmark/.ipynb_checkpoints/: Benchmarks-checkpoint.ipynb  memcpy_bench-checkpoint.f90
course_material/src/: CMakeLists.txt  hip_utils.f90  kinds.h  math_utils.f90
course_material/src/.ipynb_checkpoints/: hip_utils-checkpoint.f90  kinds-checkpoint.f90  kinds-checkpoint.h  math_utils-checkpoint.f90
images/: .~lock.Chess_board.odg#  .~lock.Grid.odg#  .~lock.Memory.odg#  .~lock.Multidimensional_arrays.odg#  .~lock.Strides_vector.odg#  Chess_board.odg  GPU_components.odg  Grid.odg  Memory_offset.odg  Multidimensional_arrays.odg  Strides_vector.odg
src/: hip_utils.f90
(+84 files in other folders)
